/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 first_name last_name
 */
package ex45.base;

public class WordReplacer {
	public static String replace(String origin, String oldWord, String newWord) {
		return origin.replace(oldWord,newWord);
	}
}
