@startuml
'https://plantuml.com/class-diagram

class App {
    *Scanner

    *getString( String )
}

class FileHandler {
    +getProjectDirectory()
    +getOutputFile()
    +getInputFile()
    +writeToFile()
}

class WordReplacer {
    +replace()
}

object File

App --> FileHandler
FileHandler o--> File
App --> WordReplacer
@enduml